# pdx2

./: Untitled.ipynb  Untitled1.ipynb  arrow_warning.ipynb  changelog.md  makefile  pyproject.toml  readme.md
.github/workflows/: pypi_publish.yml  tests.yml
notebooks/: examples.ipynb  from_first.ipynb  pandas_helpers.ipynb
src/pdx/: __init__.py  _query.py  _util.py
src/pdx2/: _query.py
tests/: test_arrow_warning.py  test_database.py  test_imports.py  test_io.py  test_pandas_helpers.py
tests/from_file/: test_from_file.py
