[project]
name = 'pdx2'
version = '0.8.0'
description = 'Helper functions to run SQL on Pandas DataFrames'
authors = [
    {name = 'AJ Friend', email='ajfriend@gmail.com'},
]
readme = 'readme.md'
requires-python = '>=3.6'

dependencies = [
    'pandas >= 2.0',
    'duckdb >= 1.0',
    'pyarrow >= 16.0.0',
]

[project.urls]
homepage = 'https://github.com/ajfriend/pdx2'

[project.optional-dependencies]
tests = [
    'pytest >= 7.0'
]

[tool.pytest.ini_options]
# minversion = '7.0'
addopts = '--durations=10'
testpaths = [
    'tests',
]

# hatchling is kind of nice because it avoids leaving around all
# that .egg_info baloney
[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
